# spectrum_fundamentals

./: .buildinfo  .cookietemple.yml  .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  API.html  Dockerfile  README.rst  ReadMe.md  __init__.py  _key_contributors.html  authors.html  code_of_conduct.html  constants.py  contributing.html  cookietemple.cfg  create_setup.py  df  fragments.py  genindex.html  index.html  installation.html  modules.html  news.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  readme.html  reference.html  requirements.txt  search.html  searchindex.js  setup.py  spectrum_fundamentals.annotation.html  spectrum_fundamentals.html  spectrum_fundamentals.metrics.html  usage.html
.github/: release-drafter.yml
.github/workflows/: build_package.yml  labeler.yml  main_master_branch_protection.yml  publish_docs.yml  publish_package.yml  run_cookietemple_lint.yml  run_tests.yml  sync_project.yml
_sources/: index.rst.txt  installation.rst.txt  reference.rst.txt  spectrum_fundamentals.rst.txt
_static/: documentation_options.js
annotation/: __init__.py  annotation.py
docs/: API.rst  Makefile  _key_contributors.rst  conf.py  contributing.rst  index.rst  installation.rst  make.bat  modules.rst  news.rst  quickstart.rst  reference.rst  requirements.txt  spectrum_fundamentals.annotation.rst  spectrum_fundamentals.metrics.rst  usage.rst
docs/_build/doctrees/: authors.doctree  code_of_conduct.doctree  contributing.doctree  create_setup.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree  noxfile.doctree  readme.doctree  reference.doctree  setup.doctree  spectrum_fundamentals.annotation.doctree  spectrum_fundamentals.doctree  spectrum_fundamentals.metrics.doctree  tests.doctree  usage.doctree
docs/_build/html/: .buildinfo  authors.html  code_of_conduct.html  contributing.html  create_setup.html  genindex.html  index.html  installation.html  modules.html  noxfile.html  objects.inv  py-modindex.html  readme.html  reference.html  search.html  searchindex.js  setup.html  spectrum_fundamentals.annotation.html  spectrum_fundamentals.html  spectrum_fundamentals.metrics.html  tests.html  usage.html
fundamentals/: __init__.py  charge.py  constants.py  fragments.py  mod_string.py
fundamentals/annotation/: annotation.py
fundamentals/metrics/: fragments_ratio.py  metric.py  percolator.py  similarity.py
makefiles/: Linux.mk  Windows.mk
spec_fundamentals/: __init__.py  __main__.py
spec_fundamentals/annotation/: annotation.py
spec_fundamentals/metrics/: fragments_ratio.py  percolator.py  similarity.py
spectrum_fundamentals/: __init__.py  __main__.py  charge.py  constants.py  fragments.py  mod_string.py
spectrum_fundamentals/annotation/: annotation.py
spectrum_fundamentals/metrics/: __init__.py  fragments_ratio.py  metric.py  percolator.py  similarity.py
tests/: __init__.py  test_main.py
tests/unit_tests/: test_annotation.py  test_charge.py  test_constants.py  test_fragments.py  test_fragments_ratio.py  test_mod_string.py  test_percolator.py  test_similarity.py
tests/unit_tests/data/: annotation_xl_input.json  annotation_xl_noncl_input.json  annotation_xl_noncl_output.json  annotation_xl_output.json  fragments_meta_data.json  fragments_meta_data_all_ions.json  fragments_meta_data_cl_xl.json  fragments_meta_data_etd_ecd.json  fragments_meta_data_ethcd_etcid.json  fragments_meta_data_hcd_cid.json  perc_input.csv  (+9 more)
(+23 files in other folders)
