[tool.poetry]
name = "fundamentals"
version = "0.1.0"
description = ""
authors = ["WassimG <wassim.gabriel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.1"
pandas = "^1.3.0"
statsmodels = "^0.13.2"
scikit-learn = "^1.0"
joblib = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools>=57.1.0",
    "wheel"
    ]
build-backend = "poetry.core.masonry.api"

